--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,18 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.google.http-client</groupId>
+            <artifactId>google-http-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.http-client</groupId>
+            <artifactId>google-http-client-jackson2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-storage</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
@@ -40,10 +52,6 @@
         <dependency>
             <groupId>com.google.gdata</groupId>
             <artifactId>core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.google.api-client</groupId>
-            <artifactId>google-api-client</artifactId>
         </dependency>
         <dependency>
             <groupId>com.google.api-client</groupId>
@@ -126,6 +134,21 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>com.google.http-client</groupId>
+                <artifactId>google-http-client</artifactId>
+                <version>1.25.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.http-client</groupId>
+                <artifactId>google-http-client-jackson2</artifactId>
+                <version>1.25.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.apis</groupId>
+                <artifactId>google-api-services-storage</artifactId>
+                <version>v1-rev158-1.25.0</version>
+            </dependency>
+            <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>4.11</version>
@@ -163,11 +186,6 @@
             </dependency>
             <dependency>
                 <groupId>com.google.api-client</groupId>
-                <artifactId>google-api-client</artifactId>
-                <version>1.16.0-rc</version>
-            </dependency>
-            <dependency>
-                <groupId>com.google.api-client</groupId>
                 <artifactId>google-api-client-gson</artifactId>
                 <version>1.16.0-rc</version>
             </dependency>
@@ -189,7 +207,7 @@
             <dependency>
                 <groupId>com.github.feroult</groupId>
                 <artifactId>gapi</artifactId>
-                <version>1.1.3</version>
+                <version>2.0.1</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
